2009-05-15  Jaroslav Hajek  <highegg@gmail.com>
	
	* Array.cc (Array<T>::instantiation_guard): New function
	(INSTANTIATE_ARRAY): Always override it here.
	* Array.h: Declare it.

2009-05-15  Jaroslav Hajek  <highegg@gmail.com>

	* ArrayN-idx.h: Remove file.
	* ArrayN.cc: Don't include it.
	* MArrayN.cc: Dtto.

2009-05-09  Jaroslav Hajek  <highegg@gmail.com>

	* Array-util.cc (zero_dims_inquire): Move j++ out of branch.

2009-05-07  Marco Atzeri  <marco_atzeri@yahoo.it>

        * Makefile.in: (SHLPRE): Rename from SHLLIBPRE.

2009-05-05  Robert T. Short  <octave@phaselockedsystems.com>

	* file-ops.h (file_ops::tail) New function.

2009-05-05  Carsten Clark  <tantumquantum+gnuoctave@gmail.com>

	* Quad.cc (user_function): Use access_double and assign_double on
	SPARC only, not on all Sun systems.
	* sun-utils.h: Likewise, define these functions on SPARC only.

2009-05-05  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc (assign1): Fix an old indexing bug.

2009-05-04  Carsten Clark  <tantumquantum+gnuoctave@gmail.com>

	* Quad.cc (float_user_function): Remove Sun/GCC special case.

2009-04-16  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.cc (idx_vector::idx_range_rep::idx_range_rep (const
	Range&)): Check for positive integer indices. Unify gripes.

2009-04-15  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (rec_permute_helper::blk_trans): Declare as static.
	(Array<T>::transpose): Reuse it.

2009-04-04  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::make_unique): Don't economize when unique.
	(Array<T>::resize_fill (octave_idx_type, const T&)): Optimize push &
	pop operations.
	(Array<T>::delete_elements (const idx_vector&)): Do pop operation
	using resize.

2009-03-29  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::assign): Remove redundant checks after invalid
	resize.

2009-03-26  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::find): Reshape result for Matlab compatibility.